--- a/mocapi.css
+++ b/mocapi.css
@@ -43,7 +43,7 @@ h5 {font-size: 12pt; font-variant: normal; font-weight: bold; /*Content em*/
 
 /* NavMenu */
 nav {
-color:black; 
+color:gray; 
 position:relative; 
 top:25px; left: 0px; 
 width: 100%; height: 60px;
