--- a/mocapi.css
+++ b/mocapi.css
@@ -36,14 +36,14 @@ h2 {font-size: 18pt; font-variant: normal; font-weight: normal; /*Logo*/
 	font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; line-height:100%;}
 h3 {font-size: 18pt; font-variant: normal; font-weight: bold; 	/*Content Heading*/
 	font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; line-height:100%;}
-h4 {font-size: 11pt; font-variant: normal; font-weight: normal; /*navMenu*/
+h4 {font-size: 11pt; color:gray; font-variant: normal; font-weight: normal; /*navMenu*/
 	font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; }
 h5 {font-size: 12pt; font-variant: normal; font-weight: bold; /*Content em*/
 	font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; line-height:100%;}
 
 /* NavMenu */
 nav {
-color:gray; 
+color:black; 
 position:relative; 
 top:25px; left: 0px; 
 width: 100%; height: 60px;
