--- a/mocapi.css
+++ b/mocapi.css
@@ -64,10 +64,11 @@ nav {display:inline-block; position:absolute; width:100%; top:20px;}
 	.menuLineActive {width:136px; height:3px;}	
 
 .slogan {display:inline-block; position:absolute; width:560px; height:300px; top:200px; right:20px;}
-#picTails{position:absolute; width:240px; height:569px; bottom:0px; right:0px; }
 
+#picTails{position:absolute; width:240px; height:569px; bottom:0px; right:0px;}
+#picHeads{position:absolute; width:414px; height:523px; bottom:0px; left:0px;}
 
 footer {position: fixed; width:100%; height:30px; bottom: 0px; color:#8C8C8C;}
-#constr {position:relative; margin-left:auto; margin-right:auto; margin-top:0px; width:940px; height:30px; background:orange;}
-#trademark {position:relative; margin-left:auto; margin-right:auto; margin-top:0px; width:940px;}
-#trademark p {text-align: left; text-indent:20px; font-size: 8pt; font-variant: normal; font-weight: normal; font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; line-height:100%;}
+	#constr {position:relative; margin-left:auto; margin-right:auto; margin-top:0px; width:940px; height:30px; top:-50px; background:orange;}
+	#trademark {position:relative; margin-left:auto; margin-right:auto; margin-top:0px; width:940px;}
+	#trademark p {text-align: left; text-indent:20px; font-size: 8pt; font-variant: normal; font-weight: normal; font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; line-height:100%;}
