--- a/mocapi.css
+++ b/mocapi.css
@@ -39,6 +39,8 @@ h4 {font-size: 11pt;  font-variant: normal; font-weight: normal; /*navMenu*/
 	font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; line-height:300%;}
 h41 {font-size: 11pt;  font-variant: normal; font-weight: normal; /*navMenu*/
 	font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; line-height:200%;}
+h42 {font-size: 11pt;  font-variant: normal; font-weight: normal; /*navMenu*/
+	font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; line-height:140%;}
 h5 {font-size: 16pt; font-variant: normal; font-weight: normal; /*Slogan*/
 	font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; line-height:180%;}
 
