--- a/mocapi.css
+++ b/mocapi.css
@@ -15,7 +15,6 @@ background:#F3F3F3;   /*#F3F3F3;*/
 }
 
 
-
 /* UNIFIED COLORS */
 /* default #mocapiMenu link color */
 #mocapiMenu a:link, #mocapiMenu a:visited, #mocapiMenu a:hover {color:#8C8C8C;}
@@ -67,8 +66,11 @@ nav {display:inline-block; position:absolute; width:100%; top:20px;}
 
 .slogan {display:inline-block; position:absolute; width:560px; height:300px; top:200px; right:20px;}
 
-#picTails{position:absolute; width:240px; height:569px; bottom:0px; right:0px;}
-#picHeads{position:absolute; width:414px; height:523px; bottom:0px; left:0px;}
+#picTails{position:absolute; width:202px; height:465px; bottom:30px; right:0px; 
+background:url(images/tails.png); background-size:100% 100%; background-repeat:no-repeat;}
+
+#picHeads{position:absolute; width:368px; height:495px; bottom:30px; left:0px; 
+background:url(images/heads.png); background-size:100% 100%; background-repeat:no-repeat;}
 
 footer {position: fixed; width:100%; height:30px; bottom: 0px; color:#8C8C8C;}
 	#constr {position:relative; margin-left:auto; margin-right:auto; margin-top:0px; width:940px; height:30px; top:-50px; background:orange;}
