--- a/mocapi.css
+++ b/mocapi.css
@@ -76,3 +76,7 @@ footer {position: fixed; width:100%; height:30px; bottom: 0px; color:#8C8C8C;}
 	#constr {position:relative; margin-left:auto; margin-right:auto; margin-top:0px; width:940px; height:30px; top:-50px; background:orange;}
 	#trademark {position:relative; margin-left:auto; margin-right:auto; margin-top:0px; width:940px;}
 	#trademark p {text-align: left; text-indent:20px; font-size: 8pt; font-variant: normal; font-weight: normal; font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; line-height:100%;}
+
+.form_temp{display:inline-block; position:absolute; width:621px; height:658px; top:200px; left:354px; 
+background:url(images/form_placeholder.jpg); background-size:100% 100%; background-repeat:no-repeat;}
+
