--- a/mocapi.css
+++ b/mocapi.css
@@ -11,6 +11,7 @@ a:active {color:black;}  /* selected link BLUE*/
 /*a {text-decoration:none;}*/
 
 nav a {text-decoration:none;}
+h21 a {text-decoration:none;}
 
 /* UNIFIED COLORS */
 /* default #mocapiMenu link color */
@@ -28,6 +29,8 @@ nav a {text-decoration:none;}
 
 /* Fonts */
 h2 {font-size: 18pt; font-variant: normal; font-weight: normal; /*Logo*/
+	font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; line-height:130%;}
+h21 {font-size: 18pt; font-variant: normal; font-weight: normal; /*Logo*/
 	font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; line-height:130%;}
 h3 {font-size: 18pt; font-variant: normal; font-weight: bold; 	/*Content Heading*/
 	font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif; line-height:100%;}
