--- a/mocapi.css
+++ b/mocapi.css
@@ -12,6 +12,7 @@ a:active {color:black;}  /* selected link BLUE*/
 
 nav a {text-decoration:none;}
 h21 a {text-decoration:none;}
+h5 a {text-decoration:none;}
 
 /* UNIFIED COLORS */
 /* default #mocapiMenu link color */
