--- a/test/css/blueprint/screen.css
+++ b/test/css/blueprint/screen.css
@@ -273,3 +273,4 @@ ul.none {list-style-type:none;list-style:none}
 #slogan {font-size:1.44em;line-height:1em;margin-bottom:1.2em;color:#043b66}
 
 img.right {margin:0.5em 0 1.5em 1.5em;padding:0;}
+html {overflow: scroll;overflow-x:hidden;overflow-y:scroll}
