--- a/test/css/blueprint/screen.css
+++ b/test/css/blueprint/screen.css
@@ -270,6 +270,7 @@ h1, h2, h3, h4, h5, h6, a {color:#043b66}
 div.links a {color:#043b66;text-decoration:none}
 div.links {text-align:center}
 ul.none {list-style-type:none;list-style:none}
+ul.none li {margin-bottom: 15px}
 #slogan {font-size:1.44em;line-height:1em;margin-bottom:1.2em;color:#043b66}
 
 img.right {margin:0.5em 0 1.5em 1.5em;padding:0;}
